experiments/t5/reward_models/logs/41579_0.log
hi
Thu 23 Mar 16:42:18 GMT 2023
compute-permanent-node-870
uid=10025(asa_cooper_stickland) gid=10012(owain_evans) groups=10012(owain_evans)
/data/asa_cooper_stickland/situational-awareness
doing it in one go
1
Traceback (most recent call last):
  File "/data/asa_cooper_stickland/situational-awareness/scripts/t5/train.py", line 117, in <module>
    from scripts.t5.generate_data import generate_datasets
  File "/data/asa_cooper_stickland/situational-awareness/scripts/t5/generate_data.py", line 69
    prompt2subject = {prompt: x["subjects"] for prompt, x in zip(prompts, dataset["validation"]}
                                                                                               ^
SyntaxError: closing parenthesis '}' does not match opening parenthesis '('
